Corrected selectors. Fixed bugs.

--- a/Main/build.gradle
+++ b/Main/build.gradle
@@ -13,6 +13,6 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:support-v4:+'
     compile 'com.android.support:appcompat-v7:+'
-    //compile fileTree(dir: 'libs', include: ['*.jar'])
 }
