--- a/Main/src/main/AndroidManifest.xml
+++ b/Main/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/MyTheme">
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.acbelter.scheduleview.MainActivity"
             android:label="@string/app_name" >
